# Rust-Stuco-Project

./: .gitignore  Cargo.toml
src/: lex.rs  main.rs  phon.rs
