[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
fltk = { version = "^1.2", features = ["fltk-bundled"] }
arboard = "2"
serde_json = "1.0"
regex = "1.5"
